Update Forge to 40.2.4